--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="fa">
 
 <head>
     <meta charset="utf-8">
@@ -13,8 +13,7 @@
     <link href="/css/app.380e4e03.css" rel="stylesheet">
 </head>
 
-<body><noscript><strong>We're sorry but mini-project doesn't work properly without JavaScript enabled. Please enable it
-            to continue.</strong></noscript>
+<body><noscript><strong>We're sorry but mini-project doesn't work properly without JavaScript enabled</strong></noscript>
     <div id="app"></div>
     <script src="/js/chunk-vendors.09e7297a.js"></script>
     <script src="/js/app.d6e25aa7.js"></script>
